test/language/spec/ownership/invalid/weak_return.topo
// S-OWN-003: weak as function return type is an error
// EXPECT-ERROR: weak.*S-OWN-003

std::import("widget.h", Widget);

namespace test {
  public:
    weak Widget getParent();
}
